--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,10 +2,6 @@
 @import "./colors";
 @import "./typography";
 
-html {
-  height: -webkit-fill-available;
-}
-
 html,
 body {
   background-color: $alabaster;
@@ -17,7 +13,6 @@ body {
 
 body {
   @extend .body_text;
-  min-height: -webkit-fill-available;
 }
 
 a,
